# cplusplus2021

./: complete _road_map.md
Section 1/: Day1.md  Day2.md
The Cherni course/: Intro.md  a.out  compilerTasks.md  dbugging  functions.cpp  header-files  inline keuword in cpp  linker.md  out  static in c++.md  variables.cpp
The Cherni course/IteratorsInCpp/: CMakeLists.txt  main.cpp
The Cherni course/nowAllNotesGoesHere/: CMakeLists.txt  arraysInCpp.cpp  classes.cpp  constAndMutableUsages.cpp  constructor.cpp  control_flow.cpp  debug.cpp  destructor.cpp  dynamicCnstructor.cpp  enumClassAndItsDifferenceFromEnum.cpp  enumeration.cpp  if-else.cpp  implicitConversionAndExplicitKeyword.cpp  inheritance.cpp  interfacesPureVirtualFunction.cpp  local_static  local_static.cpp  log_class.cpp  loops_in_c++.cpp  member_intializer_list.cpp  ofstreamExample.cpp  operatorOverloading.cpp  pointers.cpp  references  references.cpp  smartPointersInCpp.cpp  staticAndExtern.cpp  staticInClasses.cpp  string.cpp  stringLiteral.cpp  structVsClasses.cpp  templates.cpp  virtulaWayForOveriding.cpp  (+2 more)
boost-demo/: CMakeLists.txt
cMakeLib/: CMakeLists.txt  firstLib.cpp
cMakePractise/: CMakeLists.txt  main.cpp
cmakeTutorials/: CMakeCache.txt  CMakeLists.txt  adder.cpp  cmakeTutorial.md  main.cpp
cmakeTutorials/multiplier/: CMakeLists.txt  multiplier.cpp  multiplier.h
g++Tutorials/: g++Tutorial.md
geeksPractiseProject/: CMakeLists.txt  maxSubArray.cpp  optimizedMaxSubArray.cpp
makefiletut/: main.cpp  out
stlTuts/: CMakeLists.txt  containerAndContainerAdapters.cpp  stlIntroduction.cpp
(+7 files in other folders)
